--- a/package.json
+++ b/package.json
@@ -23,14 +23,22 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.29.0",
+    "prettier": "^1.18.2",
     "style-loader": "^0.13.1",
     "webpack": "2.2.0-rc.0",
     "webpack-dev-server": "^2.2.0-rc.0"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "husky": "^3.0.3",
     "lodash": "^4.17.15",
+    "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
